# cto-tool

./: .dockerignore  .env.local  .env.production  .env.test.opentelemetry  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  CODEOWNERS  README.md  apache.conf  cron.sh  cto-tool.code-workspace  deploy.sh  example_python_1.py  example_python_2.py  example_python_3.py  manage.py  pyproject.toml  ruff.toml
.ci_cassettes/: anomaly_driven_insights.json  insights_aggregation_pipeline.json  pipeline_a.json  pipeline_bc.json
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: cassettes-update.yaml  cicd.yaml  contextualization_script_job.yaml
.jira/: config.yml
api/: admin.py  models.py  parsers.py  permissions.py  serializers.py  urls.py  utils.py
api/migrations/: 0001_initial.py  0002_alter_genaifeedback_file.py
api/tasks/: __init__.py  process_pull_request_task.py  recalculate_commit_ai_composition_task.py
api/tests/: mixins.py
api/views/: __init__.py  attestation_view_set.py  base_webhook_view.py  current_user_view.py  developer_group_view.py  developer_view.py  genai_feedback_view_set.py  organization_metrics_view.py  pull_request_composition_view.py  pull_request_re_run_analysis_view.py  repositories_composition_view.py  repository_file_view_set.py  repository_group_list_view.py  version_view.py  webhook_azure_devops_view.py  webhook_bitbucket_view.py  webhook_github_view.py
compass/: urls.py
compass/budget/: apps.py  urls.py  views.py
compass/codebasereports/: apps.py  urls.py  views.py
compass/compliance/: apps.py  urls.py  views.py
compass/contextualization/: admin.py  apps.py  forms.py  models.py  serializers.py  urls.py  views.py
compass/dashboard/: admin.py  apps.py  models.py  urls.py  views.py
compass/documents/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
compass/integrations/: apps.py  urls.py  views.py
compass/onboarding/: apps.py  serializers.py  urls.py  views.py
compass/organization/: apps.py  serializers.py  urls.py  views.py
compass/projects/: admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
compass/roadmap/: apps.py  urls.py  views.py
compass/team/: apps.py  urls.py  views.py
compass/templates/: delivery_estimate.txt
contextualization/: .gitignore  sentry_utils.py  tags.py
contextualization/conf/: config.py  config.yaml  config_prod.yaml  get_llm.py  rate_limit.py
contextualization/models/: anomaly_insights.py  ticket_completeness.py
contextualization/tools/: json_tools.py  llm_tools.py
contextualization/utils/: csv_loader.py  custom_exceptions.py  file_filters.py  groom_json.py  otel_utils.py  output_parser.py  parse_jira_fields.py  pydantic_validators.py  timezone_independence.py  token_counter.py  token_utilities.py  vcr_mocks.py
cto_tool/: asgi.py  router.py  settings.py  storages.py  urls.py  views.py  wsgi.py
deployments/infra/: docker-compose.yaml
e2e_tests/: __init__.py  conftest.py  pipeline_runs_e2e.py
error_pages/: 500.html  README.md  maintenance.html
error_pages/js/: tailwind.config.js
mvp/: admin.py  apps.py  context_processors.py  forms.py  middlewares.py  mixins.py  models.py  opentelemetry_utils.py  serializers.py  signals.py  urls.py  utils.py
mvp/data/: jurisdictions.json  jurisdictions_info.json
mvp/migrations/: 0001_initial.py  0002_organization_and_more.py  0003_dataproviderconnection.py  0004_remove_referencerecord_critical_risk_and_more.py  0005_dataproviderproject_meta.py  0006_userinvitation.py  0007_organization_all_time_developers_and_more.py  0008_dataprovider_module.py  0009_dataproviderconnection_last_fetched_at.py  0010_remove_organization_foundation_year.py  0011_submodulemetric.py  0012_scorerecord.py  0013_alter_organization_all_time_developers_and_more.py  0014_alter_submodulemetric_metric.py  0015_alter_submodulemetric_metric_and_more.py  0016_dataprovidermember_dataprovidermemberprojectrecord.py  0017_alter_submodulemetric_metric_and_more.py  0018_alter_organization_first_commit_date.py  0019_remove_dataprovider_module_dataprovider_modules.py  0020_license.py  0021_userinvitation_updated_at.py  0022_alter_organization_num_code_lines_and_more.py  0023_alter_customuser_options_customuser_created_at_and_more.py  0024_appcomponentversion.py  0025_referencemetric_delete_submodulemetric.py  0026_userinvitation_deleted_at_userinvitation_is_deleted.py  0027_alter_userinvitation_managers.py  0028_jurisdiction.py  0029_populate_jurisdiction.py  0030_organization_jurisdictions_customers_and_more.py  0031_industry_organization_industry_new.py  0032_populate_industry.py  0033_remove_organization_industry_new_and_more.py  0034_compliancestandard_and_more.py  0035_industry_created_at_industry_updated_at.py  0036_repository_repositorysnippet.py  0037_organization_ai_code_monitor_enabled.py  0038_compliancestandardlink.py  0039_compliancestandardcomponent_name_and_more.py  0040_compliancestandardcomponent_ai_types.py  (+110 more)
mvp/services/: __init__.py  ai_composition_service.py  connected_integrations_service.py  contextualization_message_service.py  contextualization_service.py  email_service.py  fuzzy_matching_service.py  groups_ai_code_service.py  (+7 more)
scripts/: contextualization_script.sh  cron.sh  cron_ai_engine.sh  cron_import_ai_engine_data.sh  cron_minute.sh  cron_pull_requests.sh
vue-frontend/: .gitignore  .prettierrc.json  README.md  components.d.ts  eslint.config.js  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  vite.config.ts
(+523 files in other folders)
